fix spacing for server name

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -32,3 +32,7 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.nav-header{
+    padding: 33px 5px !important;
+}
